chore: typescript cleanup

--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -28,6 +28,7 @@ body {
     margin: 0;
     font-family: "Calibre", sans-serif;
     line-height: 1.6;
+    background-color: greenyellow;
     // overflow: auto;
 }
 
