--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -1,5 +1,5 @@
-@import "./_vars";
-@import "./_mixins";
+@import "../../assets/sass/vars";
+@import "../../assets/sass/mixins";
 
 .container {
     width: 100%;
