--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -26,7 +26,8 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: "Calibre", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
     background-color: greenyellow;
     // overflow: auto;
